@@ -335,6 +335,8 @@ Release 0.91.0 - Unreleased
    HBASE-3899  enhance HBase RPC to support free-ing up server handler threads
                even if response is not ready (Vlad Dogaru)
    HBASE-4142  Advise against large batches in javadoc for HTable#put(List<Put>)
+   HBASE-4139  [stargate] Update ScannerModel with support for filter package
+               additions
 
   TASKS
    HBASE-3559  Move report of split to master OFF the heartbeat channel
